feat: add local-shell implementation